Narrowed an issue with these psuedo elements covering up links in the bottom of the previous note. Since the whole reason we puth this psuedo content there is so that hyperlinks aren't covered by the main menu; thus we can use :target to reduce when this bug will happen. I tried to find some way with z-index to do it but failed.

--- a/styles/theme.css
+++ b/styles/theme.css
@@ -547,7 +547,7 @@ aside.tips div.inner {
 }
 
 
-#layout *[id]:before {
+#layout *[id]:target:before {
     display:block;
     content:" ";
     margin-top:-4em;
